--- a/Project 4/code/test/Makefile
+++ b/Project 4/code/test/Makefile
@@ -31,7 +31,7 @@ CPP = $(GCCDIR)cpp
 INCDIR =-I../userprog -I../threads
 CFLAGS = -G 0 -c $(INCDIR)
 
-all: halt matmult matmult2 sort testfiles forktest Exec_Test exectest runsim part3LockTest part3LockTest2 part3DoubleForkTest part3DoubleExecTest SecurityOfficer ScreeningOfficer CargoHandler
+all: halt matmult matmult2 sort testfiles forktest Exec_Test exectest runsim part3LockTest part3LockTest2 part3DoubleForkTest part3DoubleExecTest SecurityOfficer ScreeningOfficer CargoHandler CheckInOfficer
 
 start.o: start.s ../userprog/syscall.h
 	$(CPP) $(CPPFLAGS) start.s > strt.s
@@ -140,6 +140,12 @@ CargoHandler.o: CargoHandler.c
 CargoHandler: CargoHandler.o start.o
 	$(LD) $(LDFLAGS) start.o CargoHandler.o -o CargoHandler.coff
 	../bin/coff2noff CargoHandler.coff CargoHandler	
+	
+CheckInOfficer.o: CheckInOfficer.c
+	$(CC) $(CFLAGS) -c CheckInOfficer.c
+CheckInOfficer: CheckInOfficer.o start.o
+	$(LD) $(LDFLAGS) start.o CheckInOfficer.o -o CheckInOfficer.coff
+	../bin/coff2noff CheckInOfficer.coff CheckInOfficer	
 	
 clean:
 	rm -f *.o *.coff
